<resources>
    <string name="app_name">MyPro</string>
    <string name="username"> your username</string>
    <string name="password"> your password</string>
    <string name="passwordagain"> confirm your password</string>
    <string name="btn_login">Login</string>
    <string name="btn_regist">Register</string>
    <string name="title_activity_register">Create a new account</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_submit">submit</string>
    <string name="textview_welcome">welcome</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tap_order">Order</string>
    <string name="tap_add">Add</string>
    <string name="tap_user">Setting</string>
    <string name="fg_user_username">UserName</string>>
    <string name="fg_user_phoneNum">PhoneNumber</string>
    <string name="fg_user_defAdr">defaultAddress</string>
    <string name="fg_add_rbtn_get">Get something</string>
    <string name="fg_add_rbtn_send">Send something</string>
    <string name="fg_add_srcAdr">User address</string>
    <string name="fg_add_dstAdr">Destination address</string>
    <string name="fg_add_phoneNum">PhoneNumber</string>
    <string name="fg_add_timeLimit">Time limit</string>
    <string name="fg_add_weight">Weight</string>
    <string name="fg_add_noteInfo">Note</string>
    <string name="fg_add_orderFee">Order fee</string>
    <string name="fg_order_tap_myOrder">My \n orders</string>
    <string name="fg_order_tap_OnlineOrder">Online orders</string>
    <string name="fg_order_tap_AcceptedOrder">Accepted orders</string>
    <string name="item_btn_confirmReceipt">Confirm receipt</string>
    <string name="item_txt_orderID">Order ID: </string>
    <string name="item_txt_orderState">Order State: </string>
    <string name="item_txt_orderFee">Order Fee: </string>
    <string name="item_txt_weight">weight: </string>
    <string name="item_txt_cTime">Create Time: </string>
    <string name="item_txt_fTime">Finish Time: </string>
    <string name="item_txt_dTime">Deadline Time: </string>
    <string name="item_txt_note">note: </string>
    <string name="item_txt_phoneNum">phone Number: </string>
    <string name="item_btn_confirm">Confirm\n Receipt</string>
    <string name="item_btn_get">Get order</string>
    <string name="item_txt_srcAdr">User address: </string>
    <string name="item_txt_dstAdr">Destination address: </string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
