<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@color/colorBrownGrayLight">


    <TextView
        android:id="@+id/item_ac_orderID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/item_txt_orderID"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_ac_weight"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="152dp"
        android:text="@string/item_txt_weight"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/item_ac_orderID"
        app:layout_constraintTop_toTopOf="@+id/item_ac_orderID" />

    <TextView
        android:id="@+id/item_ac_cTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_cTime"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_ac_phoneNum"
        app:layout_constraintTop_toBottomOf="@+id/item_ac_phoneNum" />

    <TextView
        android:id="@+id/item_ac_dTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_dTime"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_ac_cTime"
        app:layout_constraintTop_toBottomOf="@+id/item_ac_cTime" />

    <TextView
        android:id="@+id/item_ac_orderFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_orderFee"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_ac_dTime"
        app:layout_constraintTop_toBottomOf="@+id/item_ac_dTime" />

    <Button
        android:id="@+id/item_ac_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorLightBrown"
        android:text="@string/btn_cancel"
        android:textColor="@color/colorBrown"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/item_ac_srcAdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_srcAdr"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_ac_orderID"
        app:layout_constraintTop_toBottomOf="@+id/item_ac_orderID" />

    <TextView
        android:id="@+id/item_ac_dstAdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_dstAdr"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_ac_srcAdr"
        app:layout_constraintTop_toBottomOf="@+id/item_ac_srcAdr" />

    <TextView
        android:id="@+id/item_ac_phoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_phoneNum"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_ac_dstAdr"
        app:layout_constraintTop_toBottomOf="@+id/item_ac_dstAdr" />

    <TextView
        android:id="@+id/dvLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorBrown"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/item_ac_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_note"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_ac_orderFee"
        app:layout_constraintTop_toBottomOf="@+id/item_ac_orderFee" />

</android.support.constraint.ConstraintLayout>