<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:background="@color/colorBrownGrayLight">


    <TextView
        android:id="@+id/item_online_orderID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/item_txt_orderID"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_online_weight"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="152dp"
        android:text="@string/item_txt_weight"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/item_online_orderID"
        app:layout_constraintTop_toTopOf="@+id/item_online_orderID" />

    <TextView
        android:id="@+id/item_online_cTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_cTime"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_online_dstAdr"
        app:layout_constraintTop_toBottomOf="@+id/item_online_dstAdr" />

    <TextView
        android:id="@+id/item_online_dTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_dTime"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_online_cTime"
        app:layout_constraintTop_toBottomOf="@+id/item_online_cTime" />

    <TextView
        android:id="@+id/item_online_orderFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_orderFee"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_online_dTime"
        app:layout_constraintTop_toBottomOf="@+id/item_online_dTime" />

    <Button
        android:id="@+id/item_online_btn_get"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorLightBrown"
        android:text="@string/item_btn_get"
        android:textColor="@color/colorBrown"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/item_online_srcAdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_srcAdr"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_online_orderID"
        app:layout_constraintTop_toBottomOf="@+id/item_online_orderID" />

    <TextView
        android:id="@+id/item_online_dstAdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_dstAdr"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_online_srcAdr"
        app:layout_constraintTop_toBottomOf="@+id/item_online_srcAdr" />

    <TextView
        android:id="@+id/dvLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorBrown"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/item_online_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_note"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_online_orderFee"
        app:layout_constraintTop_toBottomOf="@+id/item_online_orderFee" />
</android.support.constraint.ConstraintLayout>