<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:background="@color/colorBrownGrayLight">

    <TextView
        android:id="@+id/item_my_orderID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/item_txt_orderID"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_my_weight"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="152dp"
        android:text="@string/item_txt_weight"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/item_my_orderID"
        app:layout_constraintTop_toTopOf="@+id/item_my_orderID" />

    <TextView
        android:id="@+id/item_my_cTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_cTime"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_my_orderID"
        app:layout_constraintTop_toBottomOf="@+id/item_my_orderID" />

    <TextView
        android:id="@+id/item_my_dTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_fTime"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_my_cTime"
        app:layout_constraintTop_toBottomOf="@+id/item_my_cTime" />

    <TextView
        android:id="@+id/item_my_orderState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_orderState"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_my_dTime"
        app:layout_constraintTop_toBottomOf="@+id/item_my_dTime" />

    <TextView
        android:id="@+id/item_my_orderFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_orderFee"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_my_orderState"
        app:layout_constraintTop_toBottomOf="@+id/item_my_orderState" />

    <Button
        android:id="@+id/item_my_btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorLightBrown"
        android:text="@string/item_btn_confirmReceipt"
        android:textColor="@color/colorBrown"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dvLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorBrown"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/item_my_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_txt_note"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/item_my_orderFee"
        app:layout_constraintTop_toBottomOf="@+id/item_my_orderFee" />
</android.support.constraint.ConstraintLayout>