<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpic"
    tools:context=".RegisterActivity">
    <TextView
        android:id="@+id/border"
        android:layout_width="362dp"
        android:layout_height="230dp"
        android:background="@drawable/filletrectangle_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="362dp"
        android:layout_height="230dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/border"
        app:layout_constraintTop_toTopOf="@+id/border">

        <com.example.myapp.EditTextWithDel
            android:id="@+id/usernameRegEdit"
            android:layout_width="350dp"
            android:layout_height="78dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/colorBrown"
            android:textColorHint="#9F9FA0"
            android:textColorLink="@android:color/holo_orange_light"
            android:textSize="20sp"
            android:textStyle="normal"
            android:theme="@style/MyEditText" />

        <com.example.myapp.EditTextWithDel
            android:id="@+id/passwordRegEdit"
            android:layout_width="350dp"
            android:layout_height="78dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorBrown"
            android:textColorHint="#9F9FA0"
            android:textSize="20sp"
            android:theme="@style/MyEditText" />

        <com.example.myapp.EditTextWithDel
            android:id="@+id/passwordRegEditAgain"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/passwordagain"
            android:inputType="textPassword"
            android:textColor="@color/colorBrown"
            android:textColorHint="#9F9FA0"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="362dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorLightBrown"
        android:text="@string/btn_submit"
        android:textColor="@color/colorBrown"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="362dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorLightBrown"
        android:text="@string/btn_cancel"
        android:textColor="@color/colorBrown"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="189dp"
        android:layout_height="87dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/bilbo_swash_caps"
        android:text="@string/textview_welcome"
        android:textColor="@color/colorBrown"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>