<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpic">

    <ImageView
        android:id="@+id/fg_icon"
        android:layout_width="123dp"
        android:layout_height="149dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fg_icon" />

    <TextView
        android:id="@+id/fg_user_txt_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/fg_user_username"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fg_icon" />

    <TextView
        android:id="@+id/fg_user_txt_phoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/fg_user_phoneNum"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fg_user_txt_userName" />

    <TextView
        android:id="@+id/fg_user_txt_userDefAdr"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/fg_user_defAdr"
        android:textColor="@color/colorBrown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fg_user_txt_phoneNum" />

    <EditText
        android:id="@+id/fg_user_et_userName"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/colorBrown"
        android:theme="@style/MyEditTextFg"
        app:layout_constraintStart_toEndOf="@+id/fg_user_txt_userName"
        app:layout_constraintTop_toBottomOf="@+id/fg_icon" />

    <com.example.myapp.EditTextWithDel
        android:id="@+id/fg_user_et_phoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/colorBrown"
        android:theme="@style/MyEditTextFg"
        app:layout_constraintStart_toStartOf="@+id/fg_user_et_userName"
        app:layout_constraintTop_toBottomOf="@+id/fg_user_et_userName" />

    <com.example.myapp.EditTextWithDel
        android:id="@+id/fg_user_et_defAdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/colorBrown"
        android:theme="@style/MyEditTextFg"
        app:layout_constraintStart_toStartOf="@+id/fg_user_et_userName"
        app:layout_constraintTop_toBottomOf="@+id/fg_user_et_phoneNum" />

    <Button
        android:id="@+id/fg_user_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorLightBrown"
        android:text="@string/btn_submit"
        android:textColor="@color/colorBrown"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/fg_user_txt_userDefAdr"
        app:layout_constraintTop_toBottomOf="@+id/fg_user_txt_userDefAdr" />

    <Button
        android:id="@+id/fg_user_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:background="@color/colorLightBrown"
        android:text="@string/btn_cancel"
        android:textColor="@color/colorBrown"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/fg_user_btn_submit"
        app:layout_constraintTop_toTopOf="@+id/fg_user_btn_submit" />

</android.support.constraint.ConstraintLayout>